gobmkida/g1/set_depth_values
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/set_depth_values/src/engine/utils.c:1169:13: error: use of undeclared identifier 'node_limits_0'
v9 = 1000 * node_limits_0[10 - level] / 500; 
            ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/set_depth_values/src/obj/1/utils.o] Error 1
